@@ -2,6 +2,7 @@
 
 0.122 
  399616 log message error in 0.121
+ 399776 group pane not syncronized when group changes
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
